Clean up the PolyPluginManager